--- a/example3.html
+++ b/example3.html
@@ -1,53 +1,80 @@
-<style>
+<!DOCTYPE html>
+<html lang="lv" class="scroll-smooth">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skropstu Akadēmija - Kļūsti par Meistaru</title>
+    <meta name="description"
+        content="Profesionālas skropstu pieaudzēšanas apmācības un kursi. Kļūsti par pieprasītu meistari 2 mēnešu laikā.">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:wght@300;400;500;600&display=swap"
+        rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind Config -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        anthracite: '#1a1a1a',
+                        offwhite: '#f4f4f4',
+                        vibrantorange: '#f37021',
+                        glass: 'rgba(26, 26, 26, 0.7)',
+                    },
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                        serif: ['Abril Fatface', 'cursive'],
+                    },
+                    backgroundImage: {
+                        'hero-pattern': "url('https://images.unsplash.com/photo-1631214524020-7e18db9a8f92?q=80&w=2000&auto=format&fit=crop')"
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
         /* Custom scrollbar for premium feel */
         ::-webkit-scrollbar {
             width: 8px;
         }
-
         ::-webkit-scrollbar-track {
             background: #1a1a1a;
         }
-
         ::-webkit-scrollbar-thumb {
             background: #333;
             border-radius: 4px;
         }
-
         ::-webkit-scrollbar-thumb:hover {
             background: #f37021;
         }
-
         .glass-nav {
             background: rgba(26, 26, 26, 0.7);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
         }
-
         .marquee-container {
             overflow: hidden;
             white-space: nowrap;
         }
-
         .marquee-content {
             display: inline-block;
             animation: marquee 20s linear infinite;
         }
-
         @keyframes marquee {
             0% {
                 transform: translateX(100%);
             }
-
             100% {
                 transform: translateX(-100%);
             }
         }
     </style>
 </head>
-
 <body class="bg-anthracite text-offwhite font-sans antialiased selection:bg-vibrantorange selection:text-white">
-
     <!-- Announcement Bar -->
     <div
         class="bg-vibrantorange text-white text-xs py-2 tracking-widest font-semibold uppercase relative z-50 text-center px-4">
@@ -55,7 +82,6 @@
             Nākamais kurss sākas 15. februārī • Piesakies šodien un saņem starta komplektu
         </span>
     </div>
-
     <!-- Navigation -->
     <nav class="fixed w-full z-40 top-8 left-0 transition-all duration-300 glass-nav">
         <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
@@ -63,7 +89,6 @@
             <a href="#" class="font-serif text-2xl italic tracking-wide hover:text-vibrantorange transition-colors">
                 Skropstu<span class="text-vibrantorange not-italic font-bold">Akadēmija</span>
             </a>
-
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-12 text-sm font-medium tracking-wide">
                 <a href="#kursi" class="hover:text-vibrantorange transition-colors duration-300">Bāzes kursi</a>
@@ -71,13 +96,11 @@
                 <a href="#instruktore" class="hover:text-vibrantorange transition-colors duration-300">Par mums</a>
                 <a href="#galerija" class="hover:text-vibrantorange transition-colors duration-300">Darbi</a>
             </div>
-
             <!-- CTA Button -->
             <a href="#pieteikties"
                 class="hidden md:inline-flex items-center justify-center px-6 py-2.5 border border-vibrantorange text-vibrantorange font-medium text-sm tracking-wider hover:bg-vibrantorange hover:text-white transition-all duration-300 rounded-full">
                 Pieteikties
             </a>
-
             <!-- Mobile Menu Button (Hamburger) -->
             <button class="md:hidden text-offwhite hover:text-vibrantorange">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24"
@@ -113,13 +136,11 @@
             </a>
         </div>
     </nav>
-
     <!-- Hero Section -->
     <header class="relative h-screen w-full flex items-center justify-center overflow-hidden">
         <!-- Background Image with Overlay -->
         <div class="absolute inset-0 bg-hero-pattern bg-cover bg-center bg-no-repeat bg-fixed"></div>
         <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/50 to-anthracite"></div>
-
         <!-- Content -->
         <div class="relative z-10 text-center px-4 max-w-4xl mx-auto transform translate-y-8 animate-fade-in-up">
             <h1 class="font-serif text-5xl md:text-7xl lg:text-8xl leading-tight mb-6 tracking-tight">
@@ -144,7 +165,6 @@
                 </a>
             </div>
         </div>
-
         <!-- Scroll Indicator -->
         <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 animate-bounce">
             <svg class="w-6 h-6 text-white/50" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -152,7 +172,6 @@
             </svg>
         </div>
     </header>
-
     <!-- Base Course Section -->
     <section id="kursi" class="py-24 px-6 md:px-12 max-w-7xl mx-auto">
         <div class="grid md:grid-cols-2 gap-16 items-center">
@@ -164,7 +183,6 @@
                     alt="Apmācību process"
                     class="w-full h-[600px] object-cover grayscale hover:grayscale-0 transition-all duration-700 ease-in-out shadow-2xl">
             </div>
-
             <div>
                 <h4 class="text-vibrantorange text-sm font-bold tracking-widest uppercase mb-4">Profesijas Apguve</h4>
                 <h2 class="font-serif text-4xl md:text-5xl mb-8 leading-tight">Mācies no labākajiem nozares ekspertiem
@@ -193,7 +211,6 @@
                         </li>
                     </ul>
                 </div>
-
                 <div class="grid grid-cols-2 gap-6 mb-10">
                     <div class="p-6 border border-white/5 bg-white/5 hover:bg-white/10 transition-colors">
                         <h3 class="font-serif text-2xl text-vibrantorange mb-2">2 Mēneši</h3>
@@ -204,7 +221,6 @@
                         <p class="text-xs uppercase tracking-wider text-gray-500">Starptautiski atzīts</p>
                     </div>
                 </div>
-
                 <a href="#pieteikties"
                     class="inline-block px-10 py-4 bg-white text-anthracite font-bold tracking-widest uppercase hover:bg-vibrantorange hover:text-white transition-all duration-300 rounded-full">
                     Pieteikties Kursam
@@ -212,7 +228,6 @@
             </div>
         </div>
     </section>
-
     <!-- Shop Grid -->
     <section id="veikals" class="py-24 bg-black">
         <div class="max-w-7xl mx-auto px-6">
@@ -225,7 +240,6 @@
                     class="hidden md:block text-sm border-b border-vibrantorange pb-1 hover:text-vibrantorange transition-colors">Skatīt
                     visus produktus</a>
             </div>
-
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Product Card 1 -->
                 <div class="group cursor-pointer">
@@ -244,7 +258,6 @@
                         Līme "Ultra"</h3>
                     <p class="text-vibrantorange font-medium">€24.99</p>
                 </div>
-
                 <!-- Product Card 2 -->
                 <div class="group cursor-pointer">
                     <div class="relative overflow-hidden h-80 mb-6 bg-white/5">
@@ -262,7 +275,6 @@
                         Palete Mix</h3>
                     <p class="text-vibrantorange font-medium">€18.50</p>
                 </div>
-
                 <!-- Product Card 3 -->
                 <div class="group cursor-pointer">
                     <div class="relative overflow-hidden h-80 mb-6 bg-white/5">
@@ -280,7 +292,6 @@
                         Pincete V-Type</h3>
                     <p class="text-vibrantorange font-medium">€15.00</p>
                 </div>
-
                 <!-- Product Card 4 -->
                 <div class="group cursor-pointer">
                     <div class="relative overflow-hidden h-80 mb-6 bg-white/5">
@@ -299,17 +310,14 @@
                     <p class="text-vibrantorange font-medium">€85.00</p>
                 </div>
             </div>
-
             <a href="#"
                 class="block md:hidden text-center text-sm border-b border-vibrantorange pb-1 hover:text-vibrantorange transition-colors mt-8 w-max mx-auto">Skatīt
                 visus produktus</a>
         </div>
     </section>
-
     <!-- Instructor Section -->
     <section id="instruktore" class="py-24 px-6 relative overflow-hidden">
         <div class="absolute top-0 right-0 -mr-20 -mt-20 w-96 h-96 bg-vibrantorange/5 rounded-full blur-3xl"></div>
-
         <div class="max-w-5xl mx-auto grid md:grid-cols-12 gap-12 items-center">
             <div class="md:col-span-5 relative group">
                 <div
@@ -319,7 +327,6 @@
                     alt="Instruktore"
                     class="w-[400px] h-[400px] object-cover rounded-full grayscale group-hover:grayscale-0 transition-all duration-700 mx-auto">
             </div>
-
             <div class="md:col-span-7">
                 <h2 class="font-serif text-4xl mb-6">Anna Bērziņa</h2>
                 <p class="text-vibrantorange uppercase tracking-widest text-xs font-bold mb-6">Galvenā Instruktore / 10+
@@ -336,12 +343,10 @@
             </div>
         </div>
     </section>
-
     <!-- Social Proof / Gallery -->
     <section id="galerija" class="py-24 bg-black">
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="font-serif text-center text-4xl mb-16">Pirms un Pēc</h2>
-
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- Gallery Item 1 -->
                 <div class="relative group overflow-hidden h-[400px]">
@@ -354,7 +359,6 @@
                             3D</span>
                     </div>
                 </div>
-
                 <!-- Gallery Item 2 -->
                 <div class="relative group overflow-hidden h-[400px]">
                     <img src="https://images.unsplash.com/photo-1631214524020-7e18db9a8f92?q=80&w=2070&auto=format&fit=crop"
@@ -367,7 +371,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="mt-16 text-center">
                 <p class="text-gray-400 mb-6 font-light">Vairāk nekā 500+ apmierinātu klientu atsauksmes</p>
                 <div class="flex justify-center space-x-1 text-vibrantorange mb-8">
@@ -376,7 +379,6 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="bg-anthracite border-t border-white/5 py-16 px-6">
         <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-12">
@@ -389,7 +391,6 @@
                     kvalitāti.
                 </p>
             </div>
-
             <div>
                 <h4 class="text-white font-bold uppercase tracking-widest text-xs mb-6">Izvēlne</h4>
                 <ul class="space-y-3 text-gray-400 text-sm">
@@ -398,7 +399,6 @@
                     <li><a href="#instruktore" class="hover:text-vibrantorange transition-colors">Par Mums</a></li>
                 </ul>
             </div>
-
             <div>
                 <h4 class="text-white font-bold uppercase tracking-widest text-xs mb-6">Kontakti</h4>
                 <ul class="space-y-3 text-gray-400 text-sm">
@@ -407,7 +407,6 @@
                     <li>info@skropstuakademija.lv</li>
                 </ul>
             </div>
-
             <div>
                 <h4 class="text-white font-bold uppercase tracking-widest text-xs mb-6">Jaunumi</h4>
                 <div class="flex">
@@ -422,7 +421,6 @@
             &copy; 2024 Skropstu Akadēmija. Visas tiesības aizsargātas. Designed for conversion.
         </div>
     </footer>
-
     <!-- Floating WhatsApp Widget -->
     <a href="https://wa.me/37120000000" target="_blank"
         class="fixed bottom-8 right-8 bg-vibrantorange text-white p-4 rounded-full shadow-2xl hover:scale-110 transition-transform z-50 flex items-center justify-center group">
@@ -434,7 +432,6 @@
             class="absolute right-full mr-4 bg-white text-black px-3 py-1 rounded text-xs font-bold opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">Rakstīt
             WhatsApp</span>
     </a>
-
     <!-- Intersection Observer for Fade In Animations -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -443,7 +440,6 @@
                 rootMargin: '0px',
                 threshold: 0.1
             };
-
             const observer = new IntersectionObserver((entries, observer) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
@@ -453,27 +449,21 @@
                     }
                 });
             }, observerOptions);
-
             document.querySelectorAll('section > div').forEach((el) => {
                 el.classList.add('opacity-0', 'translate-y-8', 'transition-all', 'duration-1000', 'ease-out');
                 observer.observe(el);
             });
-
             // Mobile Menu Logic
             const menuBtn = document.querySelector('button.md\\:hidden');
             const closeBtn = document.getElementById('close-menu');
             const mobileMenu = document.getElementById('mobile-menu');
-
             function toggleMenu() {
                 mobileMenu.classList.toggle('translate-x-full');
                 document.body.classList.toggle('overflow-hidden');
             }
-
             if (menuBtn) menuBtn.addEventListener('click', toggleMenu);
             if (closeBtn) closeBtn.addEventListener('click', toggleMenu);
         });
     </script>
-
 </body>
-
 </html>
