--- a/example4.html
+++ b/example4.html
@@ -13,7 +13,6 @@
         rel="stylesheet">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Tailwind Config -->
     <script>
         tailwind.config = {
             theme: {
@@ -22,14 +21,14 @@
                         anthracite: '#1a1a1a',
                         offwhite: '#f4f4f4',
                         vibrantorange: '#f37021',
-                        glass: 'rgba(26, 26, 26, 0.7)',
+                        glass: 'rgba(26, 26, 26, 0.7)'
                     },
                     fontFamily: {
                         sans: ['Inter', 'sans-serif'],
-                        serif: ['Abril Fatface', 'cursive'],
+                        serif: ['Abril Fatface', 'cursive']
                     },
                     backgroundImage: {
-                        'hero-pattern': "url('https://images.unsplash.com/photo-1631214524020-7e18db9a8f92?q=80&w=2000&auto=format&fit=crop')"
+                        'hero-pattern': "url('https://images.unsplash.com/photo-1631214524020-7e18db9a8f92')"
                     }
                 }
             }
@@ -179,7 +178,7 @@
                 <div class="absolute -top-4 -left-4 w-24 h-24 border-t-2 border-l-2 border-vibrantorange/50"></div>
                 <div class="absolute -bottom-4 -right-4 w-24 h-24 border-b-2 border-r-2 border-vibrantorange/50"></div>
                 <!-- Placeholder for course image -->
-                <img src="https://images.unsplash.com/photo-1596462502278-27bfdd403348?q=80&w=800&auto=format&fit=crop"
+                <img src="https://images.unsplash.com/photo-1516975080664-ed2fc6a32937?q=80&w=800&auto=format&fit=crop"
                     alt="Apmācību process"
                     class="w-full h-[600px] object-cover grayscale hover:grayscale-0 transition-all duration-700 ease-in-out shadow-2xl">
             </div>
@@ -263,7 +262,7 @@
                     <div class="relative overflow-hidden h-80 mb-6 bg-white/5">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10">
                         </div>
-                        <img src="https://images.unsplash.com/photo-1596462502278-27bfdd403348?q=80&w=2070&auto=format&fit=crop"
+                        <img src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?q=80&w=800&auto=format&fit=crop"
                             alt="Skropstu Palete"
                             class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
                         <button
@@ -297,7 +296,7 @@
                     <div class="relative overflow-hidden h-80 mb-6 bg-white/5">
                         <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition-colors z-10">
                         </div>
-                        <img src="https://images.unsplash.com/photo-1599450371680-77a82c448d3c?q=80&w=1956&auto=format&fit=crop"
+                        <img src="https://images.unsplash.com/photo-1620331309609-e850e0f8546b?q=80&w=800&auto=format&fit=crop"
                             alt="Piespraudes"
                             class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
                         <button
@@ -350,7 +349,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- Gallery Item 1 -->
                 <div class="relative group overflow-hidden h-[400px]">
-                    <img src="https://images.unsplash.com/photo-1502444983085-f350c2658de3?q=80&w=2073&auto=format&fit=crop"
+                    <img src="https://images.unsplash.com/photo-1583001809873-a128495da465?q=80&w=800&auto=format&fit=crop"
                         alt="Darba piemērs 1"
                         class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
                     <div
