--- a/piemers-glow.html
+++ b/piemers-glow.html
@@ -107,11 +107,11 @@
         <div class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-accent/10 rounded-full blur-[120px] floating"
             style="animation-delay: -3s;"></div>
         <div class="relative z-10 text-center max-w-4xl">
-            <h2 class="text-accent text-sm font-bold tracking-[0.3em] uppercase mb-6 reveal">Professional Lash Training
+            <h2 class="text-accent text-sm font-bold tracking-[0.3em] uppercase mb-6 reveal">Profesionālas Apmācības
             </h2>
             <h1 class="font-serif text-6xl md:text-8xl lg:text-9xl leading-tight mb-8 text-transparent bg-clip-text bg-gradient-to-b from-white to-white/50 reveal text-glow"
                 style="transition-delay: 0.1s;">
-                Master<br>The Art
+                Māksla<br>Tavās Rokās
             </h1>
             <p class="text-gray-400 text-lg md:text-xl font-light mb-12 max-w-xl mx-auto reveal"
                 style="transition-delay: 0.2s;">
@@ -141,6 +141,7 @@
                         <div
                             class="absolute inset-0 bg-accent/20 mix-blend-overlay z-10 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         </div>
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1516975080664-ed2fc6a32937?q=80&w=800&auto=format&fit=crop"
                             class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-700 transform group-hover:scale-105">
                     </div>
@@ -164,6 +165,7 @@
                         <div
                             class="absolute inset-0 bg-accent/20 mix-blend-overlay z-10 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         </div>
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop"
                             class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-700 transform group-hover:scale-105">
                     </div>
@@ -185,8 +187,10 @@
     </section>
     <!-- Parallax Image Break -->
     <section class="h-[60vh] relative overflow-hidden flex items-center justify-center">
+        <!-- CORRECTED WALLPAPER -->
         <div class="absolute inset-0 bg-fixed bg-cover bg-center grayscale opacity-30"
-            style="background-image: url('https://images.unsplash.com/photo-1631214524020-7e18db9a8f92');"></div>
+            style="background-image: url('https://images.unsplash.com/photo-1583001809873-a128495da465?q=80&w=1920&auto=format&fit=crop');">
+        </div>
         <div class="absolute inset-0 bg-gradient-to-t from-dark via-transparent to-dark"></div>
         <div class="relative z-10 text-center reveal">
             <p class="text-3xl md:text-5xl font-serif italic text-white/90 mb-4">"Kvalitāte ir detaļās"</p>
@@ -196,12 +200,13 @@
     <!-- Shop Carousel (Floating) -->
     <section id="veikals" class="py-32">
         <div class="max-w-7xl mx-auto px-6">
-            <h2 class="text-3xl md:text-5xl font-serif mb-16 reveal">Top Produkti</h2>
+            <h2 class="text-3xl md:text-5xl font-serif mb-16 text-center reveal">Top Produkti</h2>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                 <!-- Product 1 -->
                 <div class="group reveal" style="transition-delay: 0s;">
                     <div
                         class="aspect-[3/4] rounded-2xl bg-card relative overflow-hidden mb-4 border border-white/5 hover:border-accent/50 transition-colors">
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1629198688000-71f23e745b6e?q=80&w=800&auto=format&fit=crop"
                             class="w-full h-full object-cover opacity-60 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="absolute bottom-4 left-4 right-4">
@@ -217,6 +222,7 @@
                 <div class="group reveal" style="transition-delay: 0.1s;">
                     <div
                         class="aspect-[3/4] rounded-2xl bg-card relative overflow-hidden mb-4 border border-white/5 hover:border-accent/50 transition-colors">
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?q=80&w=800&auto=format&fit=crop"
                             class="w-full h-full object-cover opacity-60 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="absolute bottom-4 left-4 right-4">
@@ -232,6 +238,7 @@
                 <div class="group reveal" style="transition-delay: 0.2s;">
                     <div
                         class="aspect-[3/4] rounded-2xl bg-card relative overflow-hidden mb-4 border border-white/5 hover:border-accent/50 transition-colors">
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1620331309609-e850e0f8546b?q=80&w=800&auto=format&fit=crop"
                             class="w-full h-full object-cover opacity-60 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="absolute bottom-4 left-4 right-4">
@@ -247,6 +254,7 @@
                 <div class="group reveal" style="transition-delay: 0.3s;">
                     <div
                         class="aspect-[3/4] rounded-2xl bg-card relative overflow-hidden mb-4 border border-white/5 hover:border-accent/50 transition-colors">
+                        <!-- CORRECTED IMAGE -->
                         <img src="https://images.unsplash.com/photo-1599450371680-77a82c448d3c?q=80&w=1956&auto=format&fit=crop"
                             class="w-full h-full object-cover opacity-60 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="absolute bottom-4 left-4 right-4">
